them noii dung moi

--- a/index.html
+++ b/index.html
@@ -279,5 +279,6 @@
         <hr class="hr">
         <p class="copy">Copyright 2022 webdesign.gnd All rights reserved</p>
     </footer>
+    <div>Nội dung mới</div>
 </body>
 </html>
